test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST__api_atlas_v2_groups_0123456789abcdef01234567_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Wed, 02 Apr 2025 10:43:45 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="XZQB+N92LUnLrZ3vIq0b9773kWiSODy6", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 5

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}